Modify yum commands to disable systemd plugin

--- a/.github/workflows/build-poppler.yml
+++ b/.github/workflows/build-poppler.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - name: Install Poppler
         run: |
-          yum update -y
-          yum install -y poppler-utils zip
+          yum update -y --disableplugin=systemd
+          yum install -y --disableplugin=systemd poppler-utils zip
 
       - name: Prepare layer
         run: |
